--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <img src="assets/images/logodnc.svg" alt="EscolaDNC">
         </div>
 
-        <h1>Dê os primeiros passos da<br>
+        <h1 class="texto">Dê os primeiros passos da<br>
         sua carreira em Tecnologia</h1>
 
-        <h4>
+        <h4 class="texto">
             Inscreva-se no curso gratuito de Introdução
              <br>à Tecnologia da DNC School  e aprenda os principais
               <br>fundamentos para construir experiências efetivas.
